--- a/prelim/symm-gs.tex
+++ b/prelim/symm-gs.tex
@@ -15,9 +15,9 @@ GS proofs are perfectly sound when the CRS is sampled from the perfectly binding
 \subsection{Groth-Sahai Commitments.}
 Following Groth and Sahai's work \cite{EC:GroSah08}, in symmetric groups and using the SXDH assumption, GS commitments are vectors in $\GG^2_1$ or $\GG_2^2$ of the form
 \begin{align*}
-&\GS.\Com_{ck_1}([x]_1;\vecb{r}):=\pmatri{{[0]_1}\\{[x]_1}}+r_1[\vecb{u}_1]_1+{r}_2[\vecb{u}_2]_1\\
-&\GS.\Com_{ck_1}(x;\vecb{r}):=x\left([\vecb{u}_1]_1+\pmatri{{[0]_1}\\{[1]_1}}\right)+{r}[\vecb{u}_2]_1\\
-& \GS.\Com_{ck_2}([x]_2;\vecb{r}):=\pmatri{{[0]_2}\\{[x]_2}}+r_1[\vecb{v}_1]_2+{r}_2[\vecb{v}_2]_2\\
-&\GS.\Com_{ck_2}(x;\vecb{r}):=x\left([\vecb{v}_1]_2+\pmatri{{[0]_2}\\{[1]_2}}\right)+{r}[\vecb{v}_2]_2
+&\GS.\Com_{ck_1}([x]_1;\vecb{r}):=\pmatri{{[0]_1}\\{[x]_1}}+r_1\left[\vecb{u}_1-\pmatri{0\\1}\right]_1+{r}_2[\vecb{u}_2]_1\\
+&\GS.\Com_{ck_1}(x;\vecb{r}):=x[\vecb{u}_1]_1+{r}[\vecb{u}_2]_1\\
+& \GS.\Com_{ck_2}([x]_2;\vecb{r}):=\pmatri{{[0]_2}\\{[x]_2}}+r_1\left[\vecb{v}_1-\pmatri{0\\1}\right]_2+{r}_2[\vecb{v}_2]_2\\
+&\GS.\Com_{ck_2}(x;\vecb{r}):=x[\vecb{v}_1]_2+{r}[\vecb{v}_2]_2
 \end{align*}
-where $ck_1:=[\vecb{u}_1\cat\vecb{u}_2]_1,ck_2:=[\vecb{v}_1\cat\vecb{v}_2]_2$, and $\vecb{u}_2,\vecb{v}_2$ are sampled from the same distribution as $\matr{A}$, the matrix from definition \ref{def:dlin}. The GS reference string is formed by the commitment keys $ck_1,ck_2$  and $\vecb{u}_1:=w\vecb{u}_2\vecb{v}_1:=w'\vecb{v}_2$ in the perfectly binding setting, and $\vecb{u}_1:=w\vecb{u}_2-\vecb{e}_2,\vecb{v}_1:=w'\vecb{v}_2-\vecb{v}_2$ in the perfectly hiding setting, for $w,w'\gets\Z_q$.
+where $ck_1:=[\vecb{u}_1\cat\vecb{u}_2]_1,ck_2:=[\vecb{v}_1\cat\vecb{v}_2]_2$, and $\vecb{u}_2,\vecb{v}_2$ are sampled from the same distribution as $\matr{A}$, the matrix from definition \ref{def:dlin}. The GS reference string is formed by the commitment keys $ck_1,ck_2$  and $\vecb{u}_1:=w\vecb{u}_2+\vecb{e}_2,\vecb{v}_1:=w'\vecb{v}_2+\vecb{e}_2$ in the perfectly binding setting, and $\vecb{u}_1:=w\vecb{u}_2,\vecb{v}_1:=w'\vecb{v}_2$ in the perfectly hiding setting, for $w,w'\gets\Z_q$.
