--- a/abstract.tex
+++ b/abstract.tex
@@ -1,10 +1,9 @@
 % !TEX root = ./main-ring-signature.tex
 
 Ring signatures, introduced by Rivest, Shamir and Tauman (ASIACRYPT 2001), allow to sign a message on behalf of a set of users while guaranteeing authenticity and anonymity. Groth and Kohlweiss (EUROCRYPT 2015) and Libert et al.~(EUROCRYPT 2016) constructed schemes with signatures of size logarithmic in the number of users. An even shorter ring signature, of size independent from the number of users, was recently proposed by Malavolta and  Schr\"oder (ASIACRYPT 2017).
-However these short signatures are only obtained relying on strong and controversial assumptions.
-Indeed, the former schemes are both proven secure in the random oracle model while the later requires non-falsifiable assumptions.
+However these short signatures are only obtained relying on strong and controversial assumptions. Namely, the former schemes are both proven secure in the random oracle model while the later requires non-falsifiable assumptions.
 
-Under more standard assumptions Chase and Lysyanskaya (CRYPTO 2006) proposed a constant-size, but impractical, ring signature that requires simulation sound NIZK proofs systems for circuit satisfiability.
+%Under more standard assumptions Chase and Lysyanskaya (CRYPTO 2006) proposed a constant-size, but impractical, ring signature that requires simulation sound NIZK proofs systems for circuit satisfiability.
 The most practical construction under mild assumptions remains the one of Chandran et al.~(ICALP 2007) with a signature of size $\Theta(\sqrt{n})$, where $n$ is the number of users, and security based on the Diffie-Hellman assumption in bilinear groups (the SXDH assumption in asymmetric bilinear groups).
 
 In this work we construct an asymptotically shorter ring signature from the hardness of the Diffie-Hellman assumption in bilinear groups.
