--- a/appendix/security-proof-sxdh.tex
+++ b/appendix/security-proof-sxdh.tex
@@ -15,7 +15,7 @@
 %\end{theorem}
 
 \begin{proof}
-Perfect correctness follows directly from the definitions. Perfect anonymity follows from the fact that the perfectly hiding Groth-Sahai CRS defines perfectly hiding commitments and perfect witness-indistinguishable proofs, information theoretically hiding any information about $\vecb{vk}$.
+Perfect correctness follows directly from the definitions. Perfect anonymity follows from the fact that the perfectly hiding Groth-Sahai CRS defines perfectly hiding commitments and perfect witness-indistinguishable proofs, information theoretically hiding any information about $\vecb{vk}$. Further, the re-randomized commitments are random elements $\GG_2^1$ or $\GG_2^2$, and hence independent of the original commitments, and the re-randomized proofs follows the same distribution of the honest proofs and hence, they don't reveal any information about $\vecb{vk}$.
 
 We say that an unforgeability adversary is ``eager'' if  makes all its queries to the $\mathsf{VKGen}$ oracle at the beginning. Note that any non-eager adversary $\advA'$ can be perfectly simulated  by an eager adversary that makes ${q_\mathsf{gen}}$ queries to $\mathsf{VKGen}$ and answers $\advA'$ queries to $\mathsf{VKGen}$ ``on demand''. This is justified by the fact that the output of $\mathsf{VKGen}$ is independent of all previous outputs.
 
@@ -50,32 +50,37 @@ Note that
 \end{align*}
 We proceed to bound this last probability constructing two adversaries against collision resistance of $g$ and preimage resistance of $h$. Let $1\leq \mu\leq n^{2/3}$ the index defined in $\pi_G$ and $\pi_S$.
 
-Consider an adversary $\advA_h$ that finds a second preimage of $h$ when $\mathcal{M}=Q_{q_\mathsf{gen}}$. $\advA_h$ receives as challenge $B\in Q_{q_\mathsf{gen}}$ and honestly simulates $\sfGame_1$ with the following exception. On the $i$ th query of $\advA$ to $\mathsf{VKGen}$ picks $(sk,[vk])\gets\mathsf{BB}.\KG(1^\lambda)$ and sets $(sk_i,\vecb{vk}_i):=(sk,([vk]_2,[\vecb{b}_i]_1,[\vecb{b}_i]_2,sk[\vecb{b}_i]_2))$, where $([\vecb{b}_i]_1,[\vecb{b}_i]_2)$ is the $i$ th element of $B$. When $\advA$ corrupts the $i$ th party, it returns $sk_i$ but it might also request $\vecb{a}_i$ to its oracle if we are proving security under the $(\ell,m)$-PPA assumption. When $\advA$ outputs and $\pi_{Q_m}$, $\advA_h$ extracts $A'=\{([\vecb{a}'_1]_1,[\vecb{a}'_1]_2),\ldots,([\vecb{a}'_m]_1,[\vecb{a}'_m]_2\}$ and returns $A'\cup \bar{A}_\mu$, where $\bar{A}_\mu:= B\setminus A_\mu$.
+%Consider an adversary $\advA_h$ that finds a second preimage of $h$ when $\mathcal{M}=Q_{q_\mathsf{gen}}$. It honestly simulates $\sfGame_1$ until $\advA$ outputs and $\pi_{Q_m}$. $\advA_h$  $A'=\{([\vecb{a}'_1]_1,[\vecb{a}'_1]_2),\ldots,([\vecb{a}'_m]_1,[\vecb{a}'_m]_2\}$ and returns $A'\cup \bar{A}_\mu$, where $\bar{A}_\mu:= B\setminus A_\mu$.
 
-Consider another adversary $\advA_g$ against the collision resistance of $g$ when $\mathcal{M}=\GG^{q_\mathsf{gen}}$. $\advB$ receives as challenge $[\matr{B}]_1\in\GG^{2\times {q_\mathsf{gen}}}_1$ and $[\matr{B}]_2\in\GG^{2\times {q_\mathsf{gen}}}_2$ and honestly simulates $\sfGame_1$ embedding $[\matr{B}]_1,[\matr{B}]_2$ in the user keys in the same way as $\advA_h$. When $\advA$ outputs $[\vecb{c}]_2,\allowbreak\GS.\Com_{ck_2}([\kappa'_2]_2),\ldots,\allowbreak\GS.\Com_{ck_2}([\kappa'_m]_2)$, $\advA_g$ extracts $[vk],[\kappa'_2],\ldots,[\kappa'_m]$. W.l.o.g.~\allowbreak assume that $\matr{B}=\matr{A}_\mu\cat\bar{\matr{A}}_\mu$, where $\bar{\matr{A}}_\mu$ is some matrix whose rows are the discrete logs of the elements of $\bar{A}_\mu$. $\advA_g$ attempts to extract a permutation matrix $\matr{P}$ such that  $[\matr{A}']_1=[\matr{A}_\mu]_1\matr{P}$. If there is no such permutation matrix, then $\advA_g$ aborts. Else,  $\advA_g$ returns
+Consider an adversary $\advA$ against the adaptive collision resistance of $g$ when $\mathcal{M}=\GG^{q_\mathsf{gen}}$. We construct another adversary $\advB$ against collision resistance of $g$ that receives as challenge $k_0$ plus a trapdoor for opening commitments computed with commitment key $[\matr{W}]_2$. $\advB$ honestly simulates $\sfGame_1(\advA)$ embedding $k_0$ in the crs. Wen $\advA$ calls its $\mathsf{VKGen}$ oracle, $\advB$ samples $(sk,[vk]_2)\gets\mathsf{BB}.\mathsf{KeyGen}(gk)$ and calls its $\mathsf{KeyGen}$ oracle on input $sk,0$ and returns $([vk],k)$ to $\advA$. Each time $\advA$ calls its $\mathsf{Corrupt}$ oracle, the answer is forwarded from $\advB$'s  $\mathsf{Corrupt}$ oracle.
+When $\advA$ outputs $[\matr{A}']_1,[\matr{C}']_2,[\matr{D}']_1$, $\advB$ uses its trapdoor to extract $[x'_1],[x'_2],\ldots,[x'_m]$. W.l.o.g.~\allowbreak assume that the current matrix $\matr{A}$ encoded in $k$ is $\matr{A}=\matr{A}_\mu\cat\bar{\matr{A}}_\mu$, where $\bar{\matr{A}}_\mu$ is some matrix whose columns are of the form $\vecb{a}_{i,j}$, $i\neq \mu$. Finally, $\advA$ returns
 $\pmatri{
-	{[\vecb{\kappa}_\mu]_2}\\
+	{[\vecb{x}_\mu]_2}\\
 	{[\vecb{0}]_2}},
 \pmatri{
-	{\matr{P}[\vecb{\kappa}']_2}\\
+	{[\vecb{x}']_2}\\
 	{[\vecb{0}]_2}}
 \in\GG^{q_\mathsf{gen}}_2$,
 where $[\kappa'_1]$ is the opening of $[\vecb{c}]$.
 
 Perfect soundness of proof $\pi_g$  (recall that the Groth-Sahai CRS is perfectly binding)  implies that
 \begin{align*}
-&g_{[\matr{A}']_1}([\vecb{\kappa}']_2)=[\vecb{y}]_2. %\label{eq-rs-1}
+&g_{\matr{A}'}(\vecb{x}')=\vecb{g}'. %\label{eq-rs-1}
 \end{align*}
-Perfect soundness of proof $\pi_g$ and $\pi_{Q_m}$ implies that
+Perfect soundness of proof $\pi_g$ and $\pi_{\mathcal{Q}}$ implies that
 \begin{align*}
-&h(A')=[\vecb{x}]_1\text{ and } A'\in Q_m.%\label{eq-rs-2}
+&h(A')=\vecb{h}'\text{ and } A'\in \mathcal{Q}_m.%\label{eq-rs-2}
 \end{align*}
 Given perfect soundness of proofs $\pi_G,\pi_H$, it holds that that
 \begin{align*}
-&g_{[\matr{A}']_1}([\vecb{\kappa}']_2)=g_{[\matr{A}_\mu]_1}([\vecb{\kappa}_\mu]_2)%\label{eq-rs-3}
+&g_{\matr{A}'}(\vecb{x}')=g_{\matr{A}_\mu}(\vecb{x}_\mu)%\label{eq-rs-3}
 \\
-&h(A')=h(A_\mu). %\label{eq-rs-4}.
+&h(A')=h(A_\mu), %\label{eq-rs-4}.
 \end{align*}
+and hence $\matr{A}'\equiv_\matr{U} \matr{A}$. %there exists some permutation matrix $\matr{P}\in\bits^{m\times m}$ and $\vecb{\delta}\in\Z_q^m$ such that $\matr{A}' = \matr{A}\matr{P}+\vecb{u}\vecb{\delta}^\top$.
+
+Note that $x_{\mu,i}\neq x_{\mu,j}$ for all $i\neq j$ with probability $1-m/q\approx 1$. Since $\mathsf{err}=1$, we get that $x'_1\neq x_{\mu,j}$ for all $j$ and hence. By the pigeonhole principle, there exists at least one $j\in[m]$ such that $x_{\mu,j}\neq x'_i$ for all $i\in[m]$.
+
 By Lemma \ref{lemma:hg} we get that either $A'\neq {A}_\mu$ is a second preimage for $h(A_\mu)$, thus $A'\cup\bar{A}_\mu\neq B$ and $\advA_h$ is successful, or there exists a permutation matrix $\matr{P}$, which is the one that $\advA_g$ searches, such that $g_{[\matr{A}_\mu]_1}(\matr{P}[\vecb{\kappa}']_2)=g_{[\matr{A}_\mu]_1}([\vecb{\kappa}_\mu]_2)$. $\mathsf{err}_2=1$ implies that $[vk]_2=[\kappa'_1]_2\neq[\kappa_{\mu,i}]_2$, for all $1\leq i\leq m$, and thus $\matr{P}[\vecb{\kappa}']_2\neq [\vecb{\kappa}_\mu]_2$ and, since $[\matr{B}]_1=[\matr{A}_\mu\cat\bar{\matr{A}}_\mu]_1$,
 $$
 g_{[\matr{A}_\mu]_1}(\matr{P}[\vecb{\kappa}']_2)=
