--- a/intro/discussion.tex
+++ b/intro/discussion.tex
@@ -25,6 +25,8 @@ Of course, this prevents signatures for rings containing public keys generated a
 
 The novelty of our scheme is a distributed generation, at signature time, of the matrix $\matr{A}$, such that each public key contributes with a constant number of coefficients of $\matr{A}$. This implies that now each hash is computed using different coefficients of $\matr{A}$. But then proving that the hidden hash was honestly computed is much more tricky. Indeed, is essential to include our hash function $h$ which computes a digest for a particular set of coefficients of $\matr{A}$.
 
+%\subsubsection{Kernel and Permutation Pairing Assumption.} The PP assumption might be viewed as a kernel assumption equipped with a hash function with for whose columns 
+
 \subsection{Erasures} \label{sect:erasures}
 In the security proof we need to embed a random preimage $A=\{\vecb{a}_1,\ldots,\allowbreak \vecb{a}_{q_{\mathsf{gen}}}\}$ of $h$ in the verification keys, where $q_{\mathsf{gen}}$ is the total number of verification keys. On the other hand, the adversary may adaptively corrupt parties obtaining all the random coins used to generate the verification key. That is, we need to reveal $\log_{\cP_S} \vecb{a}_i$ (the discrete logs of $\vecb{a}_i$) to the adversary, which is incompatible with the permutation pairing assumption and thus with the security of $h$. Since is not clear how to obliviously sample $(a_i\cP,a^2_i\cP)$ and we can only guess the set of corrupted parties with negligible probability, we are forced to use erasures: after sampling $a_i$ and computing $\vecb{a}_i$, the key generation algorithm erases $a_i$ and $a_i^2$.
 
